--- a/src/css/view/woo-product-compare.scss
+++ b/src/css/view/woo-product-compare.scss
@@ -1,7 +1,7 @@
 /* Woo Product Compare */
 .table-responsive {
     display: block;
-    width: 100%;
+    width: max-content;
     overflow-x: auto;
     overflow-y: hidden;
 }
